objects/Territory_Rule__c.object
<CustomObject>
    <fields>
        <fullName>A2Z_OperatorID__c</fullName>
        <formula>OpportunityOwner__r.A2Z_OperatorID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A2Z_OperatorID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsActiveUser__c</fullName>
        <formula>OpportunityOwner__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsActiveUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key1__c</fullName>
        <label>Key 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key2__c</fullName>
        <label>Key 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Territory_Rule_ID__c &amp; ' - ' &amp; OpportunityOwner__r.FirstName &amp;' ' &amp;  OpportunityOwner__r.LastName &amp; ' - ' &amp;  Key1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rule_Set__c</fullName>
        <label>Rule Set</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Rule_ID__c</fullName>
        <label>Territory Rule ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Rule_Type__c</fullName>
        <label>Territory Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Name</fullName>
                </value>
                <value>
                    <fullName>Billing State</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>SubShow</fullName>
                </value>
                <value>
                    <fullName>Account Name &amp; Billing State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Territory Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rule_Set__c</columns>
        <columns>Territory_Rule_ID__c</columns>
        <columns>Territory_Rule_Type__c</columns>
        <columns>Key1__c</columns>
        <columns>Key2__c</columns>
        <columns>OpportunityOwner__c</columns>
        <columns>Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>